--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ashutosh Aagawane - Senior Python Developer | Web Scraping Expert | API Development & Integration | AWS | ETL | Data Pipeline">
@@ -16,8 +16,8 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="container">
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-image-wrapper fade-in">
-                    <img src="ashu.jpg" alt="Ashutosh Aagawane" class="hero-image">
+                    <img src="ashu1.jpg" alt="Ashutosh Aagawane" class="hero-image">
                 </div>
                 <h1 class="hero-name fade-in-delay-1">
                     <span class="gradient-text">Ashutosh Aagawane</span>
@@ -770,5 +770,5 @@
 
     <!-- Scripts -->
     <script src="assets/js/script.js"></script>
-</body>
+  </body>
 </html>
